name:                GRACe
version:             0.1.2.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Maximilian Algehed
maintainer:          algehed@chalmers.se
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  Readme.md
cabal-version:       >=1.10

-- GRACe DSL
library
  exposed-modules:
    GL,
    GRACe2,
    TestFW.GCMP,
    TestFW.GCMCheck,
    OutParser,
    Compile0,
    Library
  other-modules:
    TestFW.GenT,
    Program
  other-extensions:
    GADTs,
    FlexibleInstances,
    UndecidableInstances,
    RankNTypes,
    ScopedTypeVariables,
    LambdaCase
  build-depends:
      base
    , process
    , mtl
    , parsec
    , parsec-numbers
    , QuickCheck
    , random
    , transformers
    , containers
    , text
    , aeson
  hs-source-dirs:
    src
  default-language:
    Haskell2010

executable RestAPI
  main-is:
    Main.hs
  other-modules:
      Compile0
    , GL
    , GRACeGraph
    , Library
    , Program
    , Service
    , Submit
    , Types
    , Utils 
  build-depends:
      base
    , aeson >= 1.1
    , aeson-pretty
    , bytestring
    , containers
    , GRACe
    , lucid
    , mtl
    , process
    , scientific
    , servant-server
    , servant-lucid
    , text
    , wai-extra
    , warp
  hs-source-dirs:
    src
  default-language:
    Haskell2010

test-suite test
  type:
    exitcode-stdio-1.0
  main-is:
    TestMain.hs
  other-modules:
    TestOutParser,
    TestFW.TestGCMCheck
  build-depends:
    base             >= 4.9  && <4.10,
    GRACe            >= 0.1  && <0.2,
    tasty            >= 0.11 && <0.12,
    tasty-hunit      >= 0.9  && <0.10,
    tasty-quickcheck >= 0.8  && <0.9,
    QuickCheck       >= 2.8,
    HUnit            >= 1.3,
    parsec           >= 3.1  && <3.2,
    parsec-numbers   >= 0.1  && <0.2,
    process          >= 1.4  && <1.5
  hs-source-dirs:
    test
  default-language:
    Haskell2010
