name:                GenericLibrary
version:             0.1.1.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Maximilian Algehed
maintainer:          algehed@chalmers.se
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  Readme.md
cabal-version:       >=1.10

library
  exposed-modules:
    GL
  other-extensions:
    GADTs,
    FlexibleInstances,
    UndecidableInstances,
    RankNTypes,
    ScopedTypeVariables
  build-depends:
    base    >= 4.9 && <4.10,
    process >= 1.4 && <1.5,
    mtl
  default-language:
    Haskell2010
  
executable GenericLibrary
  main-is:             
    Main.hs
  other-modules:       
    GL,
    SmallExample, 
    Examples
  other-extensions:    
    GADTs, 
    FlexibleInstances, 
    UndecidableInstances, 
    RankNTypes, 
    ScopedTypeVariables
  build-depends:       
    base    >=4.9 && <4.10, 
    process >=1.4 && <1.5, 
    mtl
  -- hs-source-dirs:
  default-language:    Haskell2010

