name:                GenericLibrary
version:             0.1.1.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Maximilian Algehed
maintainer:          algehed@chalmers.se
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  Readme.md
cabal-version:       >=1.10

library
  exposed-modules:
    GL,
    OutParser
  other-extensions:
    GADTs,
    FlexibleInstances,
    UndecidableInstances,
    RankNTypes,
    ScopedTypeVariables
  build-depends:
    base    >= 4.9 && <4.10,
    process >= 1.4 && <1.5,
    mtl,
    parsec >= 3.1.11,
    parsec-numbers >= 0.1.0
  default-language:
    Haskell2010

executable GenericLibrary
  main-is:
    Main.hs
  other-modules:
    GL,
    SmallExample,
    Examples
  other-extensions:
    GADTs,
    FlexibleInstances,
    UndecidableInstances,
    RankNTypes,
    ScopedTypeVariables
  build-depends:
    base    >=4.9 && <4.10,
    process >=1.4 && <1.5,
    mtl
  -- hs-source-dirs:
  default-language:    Haskell2010

test-suite test
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    .,
    test
  main-is:
    TestMain.hs
  other-modules:
    OutParser,
    TestOutParser
  build-depends:
    base,
    GenericLibrary,

    tasty >= 0.11.0.4,
    tasty-hunit >= 0.9.2,
    tasty-quickcheck >= 0.8.4,
    QuickCheck >= 2.8.2,
    HUnit >= 1.3.1.2,

    parsec >= 3.1.11,
    parsec-numbers >= 0.1.0
  default-language:
    Haskell2010
